--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<!DOCTYPE html>
-<html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>For Sathy ❤️</title>
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Great+Vibes&display=swap" rel="stylesheet">
 <style>
@@ -60,6 +55,195 @@
     h1 {
         font-family: 'Great Vibes', cursive;
         font-size: clamp(42px, 6vw, 64px);
+        margin: 0;
+        line-height: 1.1;
+    }
+    p {
+        font-size: clamp(16px, 2.6vw, 20px);
+        margin-top: 16px;
+        line-height: 1.55;
+    }
+    .btn {
+        margin-top: 18px;
+        padding: 14px 26px;
+        border: none;
+        border-radius: 999px;
+        font-size: 18px;
+        cursor: pointer;
+        background: white;
+        color: #ff6f91;
+        transition: 0.25s;
+        min-height: 48px; /* touch-friendly */
+    }
+    .btn:hover {
+        background: #ff6f91;
+        color: white;
+    }
+    section {
+        padding: 50px 16px 70px;
+    }
+    .card {
+        background: rgba(255,255,255,0.2);
+        border-radius: 20px;
+        padding: 26px;
+        margin: 16px auto;
+        max-width: var(--cardMax);
+        width: 100%;
+        backdrop-filter: blur(10px);
+    }
+    footer {
+        padding: 30px;
+        font-size: 14px;
+        opacity: 0.8;
+    }
+    .heart {
+        position: fixed;
+        top: -10px;
+        font-size: 20px;
+        animation: fall linear infinite;
+        color: #fff;
+    }
+    @keyframes fall {
+        0% { transform: translateY(0); }
+        100% { transform: translateY(100vh); }
+    }
+
+
+    /* Mobile-first improvements */
+    @media (max-width: 520px) {
+        header { padding-top: 56px; }
+        .photo-section { gap: 18px; }
+        .card { padding: 22px; border-radius: 18px; }
+        .btn {
+            width: min(340px, 100%);
+            display: inline-block;
+            margin-top: 14px;
+        }
+        /* Put YES/NO on separate lines for small screens */
+        #yesBtn { margin-right: 0 !important; }
+    }
+</style>
+</head>
+<body>
+
+<header>
+    <h1>For Sathy ❤️</h1>
+    <p>You are the most beautiful chapter of my life.</p>
+    <p style="font-size:24px; margin-top:30px;">Sathy... I don't just love you. I want to build my whole life with you. 💖</p>
+    
+    <div class="photo-section">
+        <div class="photo-card">
+            <img src="https://drive.google.com/thumbnail?id=1wqAca_UMrMGkDz5hIs8kT6FZoQaR_KVx&sz=s800" alt="My Photo">
+            <p>Me ❤️</p>
+        </div>
+        <div class="photo-card">
+            <img src="https://drive.google.com/thumbnail?id=1jHqYFbC78wj5PhYTfbKLj6IpEzXh4l9Y&sz=s800" alt="Her Photo">
+            <p>Sathy 💖</p>
+        </div>
+    </div>
+</header>
+
+<section>
+    <div class="card">
+        <h2>Why You Are Special ✨</h2>
+        <p>Your smile brightens my darkest days.<br>
+        Your voice feels like peace.<br>
+        And your presence makes everything better.</p>
+    </div>
+
+    <div class="card">
+        <h2>My Promise 💍</h2>
+        <p>I promise to respect you, care for you, and stand beside you no matter what.
+        I want to grow with you, laugh with you, and face every challenge together.
+        You are not just my love — you are my future.</p>
+    </div>
+
+    <div class="card" style="background: rgba(255,255,255,0.25);">
+        <h2>Will You Marry Me? 💍❤️</h2>
+        <p style="font-size:22px; margin-bottom:30px;">Sathy, will you make me the happiest person in this world?</p>
+        <button class="btn" id="yesBtn" onclick="sayYes()" style="margin-right:15px;">YES 💖</button>
+        <button class="btn" id="noBtn" style="background:#ff4d6d; color:white; position:relative;">NO 😅</button>
+    </div>
+</section>
+
+<footer>
+    Made with ❤️ just for Sathy
+</footer>
+
+<script>
+
+
+function sayYes() {
+    document.body.innerHTML = `
+        <div style="display:flex; justify-content:center; align-items:center; height:100vh; background: linear-gradient(135deg, #ff758c, #ff7eb3); color:white; text-align:center; flex-direction:column;">
+            <h1 style="font-family:'Great Vibes', cursive; font-size:70px;">She Said YES! 💍❤️</h1>
+            <p style="font-size:24px; margin-top:20px;">Our forever begins now ✨</p>
+        </div>
+    `;
+}
+
+const noBtn = document.getElementById('noBtn');
+const yesBtn = document.getElementById('yesBtn');
+
+// Video style escape effect (desktop: when cursor gets close)
+document.addEventListener('mousemove', function(e) {
+    if (!noBtn) return;
+    const rect = noBtn.getBoundingClientRect();
+    const distance = Math.hypot(
+        e.clientX - (rect.left + rect.width / 2),
+        e.clientY - (rect.top + rect.height / 2)
+    );
+
+    // If cursor comes close (100px radius), run away
+    if (distance < 100) {
+        const x = Math.random() * (window.innerWidth - rect.width);
+        const y = Math.random() * (window.innerHeight - rect.height);
+        noBtn.style.position = "fixed";
+        noBtn.style.left = x + "px";
+        noBtn.style.top = y + "px";
+    }
+});
+
+// Mobile/touch: jump away on touch
+if (noBtn) {
+    const jump = () => {
+        const rect = noBtn.getBoundingClientRect();
+        const x = Math.random() * (window.innerWidth - rect.width);
+        const y = Math.random() * (window.innerHeight - rect.height);
+        noBtn.style.position = "fixed";
+        noBtn.style.left = x + "px";
+        noBtn.style.top = y + "px";
+    };
+    noBtn.addEventListener('touchstart', (e) => { e.preventDefault(); jump(); }, { passive: false });
+    noBtn.addEventListener('click', (e) => { e.preventDefault(); jump(); });
+}
+
+// Small UX: make YES a bit easier on mobile
+if (yesBtn) {
+    yesBtn.addEventListener('touchstart', () => {
+        yesBtn.style.transform = 'scale(1.03)';
+        setTimeout(() => yesBtn.style.transform = '', 180);
+    }, { passive: true });
+}
+
+// Floating hearts
+function createHeart() {
+    const heart = document.createElement('div');
+    heart.classList.add('heart');
+    heart.innerHTML = '❤️';
+    heart.style.left = Math.random() * 100 + 'vw';
+    heart.style.animationDuration = (Math.random() * 3 + 2) + 's';
+    document.body.appendChild(heart);
+
+    setTimeout(() => {
+        heart.remove();
+    }, 5000);
+}
+setInterval(createHeart, 300);
+</script>
+
+</body>
+</html>
         margin: 0;
         line-height: 1.1;
     }
